--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <input id="topic-gift" type="text" placeholder="Busca GIFOS y más">
                             <i id="search-gift" class="fas fa-search"></i>
                         </div>
-                        <ul></ul>
+                        <ul id="suggest-list"></ul>
                     </div>
                 </div>
             </div>
@@ -44,21 +44,11 @@
         <section class="trending">
             <div>
                 <p class="title">Trending:</p>
-                <p class="options">
-                    <span>Reactions,</span>
-                    <span>Entertainment,</span>
-                    <br>
-                    <span>Sports,</span>
-                    <span>Stickers,</span>
-                    <span>Artists</span>
-                </p>
-                <div class="results"></div>
+                <p id="options" class="options"></p>
+                <div class="results-trending"></div>
             </div> 
         </section>
-        <section class="results">
-            <p></p>
-            <div></div>
-            <button>VER MÁS</button>
+        <section id="stc-results" class="results">
         </section>
         <section class="error">
             <hr>
