create small details for search gif

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
                     <img src="assets/ilustra_header.svg" alt="">
                     <div>
                         <div>
+                            <i id="left-search-icon" class="fas fa-search"></i>
                             <input id="topic-gift" type="text" placeholder="Busca GIFOS y más">
-                            <i id="search-gift" class="fas fa-search"></i>
+                            <i id="search-icon" class="fas fa-search"></i>
+                            <i id="clean-icon" class="fas fa-times"></i>
                         </div>
-                        <ul id="suggest-list"></ul>
+                        <ul id="suggest-list" class="suggest-list"></ul>
                     </div>
                 </div>
             </div>
