--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <label class="burguer-icon" for="menu-toggle"><i class="fas fa-bars"></i></label>
             <label class="close-icon" for="menu-toggle"><i class="fas fa-times"></i></label>
             <ul class="menu">
-                <li id="mode"><a href="#">Modo <span>Nocturno</span><span id="day-mode">Diurno</span></a></li>
+                <li id="mode"><a href="#">Modo<span class="dark" id="dark-mode"> Nocturno</span><span class="day" id="day-mode"> Diurno</span></a></li>
                 <li id="fav"><a href="#">Favoritos</a> </li>
                 <li id="my-gifs"><a href="#">Mis GIFOS</a></li>
                 <li id="create-gif"><i class="fas fa-plus-circle"></i></li>
