create favorites and mygifos sections with no content working

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <main>
-        <section class="search">
+        <section id="stc-search" class="search">
             <div>
                 <p>Inspírate, busca, guarda, y crea los mejores <span>GIFOS</span></p>
                 <div>
@@ -43,7 +43,7 @@
                 </div>
             </div>
         </section>
-        <section class="trending">
+        <section id="stc-trending" class="trending">
             <div>
                 <p class="title">Trending:</p>
                 <p id="options" class="options"></p>
@@ -51,30 +51,24 @@
         </section>
         <section id="stc-results" class="results">
         </section>
-        <section class="favorites">
-            <div>
-                <img src="" alt="">
-                <p>Favoritos</p>
-                <div>
-                
-                </div>
-                <button>VER MÁS</button>
-            </div>
-           
-            <div>
-                <img src="" alt="">
-                <p>"¡Guarda tu primer GIFO en Favoritos 
-                    para que se muestre aquí!"</p>
+        <section id="stc-favs" class="favorites">
+            <div class="ctn-items">
+                <img class="icon" src="assets/icon-favoritos.svg" alt="">
+                <p class="title">Favoritos</p>
+                <img class="img-nocontent" src="assets/icon-fav-sin-contenido.svg" alt="">
+                <p class="txt">"¡Guarda tu primer GIFO en Favoritos para que se muestre aquí!"</p>
+                <div id="" class="ctn-content"></div>
+                <!-- <button>VER MÁS</button> -->
             </div>
         </section>
-        <section class="mygifos">
-            <img src="" alt="">
-            <p>Mis GIFOS</p>
-            <div></div>
-            <div>
-                <img src="" alt="">
-                <p>¡Anímate a crear tu primer GIFO!</p>
+        <section id="stc-mygifos" class="mygifos">
+            <div class="ctn-items">
+                <img class="icon" src="assets/icon-mis-gifos-sin-contenido.svg" alt="">
+                <p class="title">Mis GIFOS</p>
+                <img class="img-nocontent" src="assets/icon-mis-gifos-sin-contenido.svg" alt="">
+                <p class="txt">¡Anímate a crear tu primer GIFO!</p>
             </div>
+            <div id="" class="ctn-content"></div>
         </section>
         <section class="gifcommunity">
             <div>
