create trending gifs section

--- a/index.html
+++ b/index.html
@@ -71,17 +71,13 @@
             <div id="" class="ctn-content"></div>
         </section>
         <section class="gifcommunity">
-            <div>
+            <div class="ctn-gifcomm">
                 <p class="title">Trending GIFOS</p>
                 <p class="txt">Mira los últimos <br> GIFOS de nuestra comunidad</p>
-                <div>
-                    <a class="prev" href=""></a>
-                    <div>
-                        <div class="img-slide">
-                            <img src="assets/" alt="">
-                        </div>
-                    </div>
-                    <a class="next" href=""></a>
+                <div class="mainctn-gifs">
+                    <i class="ic prev fas fa-angle-left"></i>
+                    <div id="ctn-gifs" class="ctn-gifs"></div>
+                    <i class="ic next fas fa-angle-right"></i>
                 </div>
             </div>    
         </section>
