improve gif community section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                 <p class="txt">Mira los últimos <br> GIFOS de nuestra comunidad</p>
                 <div class="mainctn-gifs">
                     <i class="ic prev fas fa-angle-left"></i>
-                    <div id="ctn-gifs" class="ctn-gifs"></div>
+                    <div id="ctn-gifs" class="ctn-gifs">
+                        <div id="sctn-gifs" class="sctn-gifs"></div>
+                    </div>
                     <i class="ic next fas fa-angle-right"></i>
                 </div>
             </div>    
