get id of card gif

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </nav>
     </header>
     <main>
+        <div class="modal" id="modal"></div>
         <section id="stc-search" class="search">
             <div>
                 <p>Inspírate, busca, guarda, y crea los mejores <span>GIFOS</span></p>
