modal of gifcommunity works

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         </nav>
     </header>
     <main>
-        <div class="modal" id="modal"></div>
         <section id="stc-search" class="search">
             <div>
                 <p>Inspírate, busca, guarda, y crea los mejores <span>GIFOS</span></p>
@@ -71,7 +70,7 @@
             </div>
             <div id="" class="ctn-content"></div>
         </section>
-        <section class="gifcommunity">
+        <section id="gifcommunity"class="gifcommunity">
             <div class="ctn-gifcomm">
                 <p class="title">Trending GIFOS</p>
                 <p class="txt">Mira los últimos <br> GIFOS de nuestra comunidad</p>
