reorganize files and some advance in favorites section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <div class="ctn-items">
                 <img class="icon" src="assets/icon-favoritos.svg" alt="">
                 <p class="title">Favoritos</p>
+                <div class="ctn-favoritos"></div>
                 <img class="img-nocontent" src="assets/icon-fav-sin-contenido.svg" alt="">
                 <p class="txt">"¡Guarda tu primer GIFO en Favoritos para que se muestre aquí!"</p>
                 <div id="" class="ctn-content"></div>
@@ -136,5 +137,5 @@
         </div>
     </footer> 
 </body>
-<script src="main.js" type="module"></script>
+<script src="/scripts/main.js" type="module"></script>
 </html>
