--- a/index.html
+++ b/index.html
@@ -55,21 +55,23 @@
             <div class="ctn-items">
                 <img class="icon" src="assets/icon-favoritos.svg" alt="">
                 <p class="title">Favoritos</p>
-                <div class="ctn-favoritos"></div>
-                <img class="img-nocontent" src="assets/icon-fav-sin-contenido.svg" alt="">
-                <p class="txt">"¡Guarda tu primer GIFO en Favoritos para que se muestre aquí!"</p>
-                <div id="" class="ctn-content"></div>
-                <!-- <button>VER MÁS</button> -->
+                <div id="hide-favnocontent" class="ctn-items">
+                    <img class="img-nocontent" src="assets/icon-fav-sin-contenido.svg" alt="">
+                    <p class="txt">"¡Guarda tu primer GIFO en Favoritos para que se muestre aquí!"</p>
+                </div>
             </div>
+            <div id="root-fav" class="root-fav"></div>
         </section>
         <section id="stc-mygifos" class="mygifos">
             <div class="ctn-items">
-                <img class="icon" src="assets/icon-mis-gifos-sin-contenido.svg" alt="">
+                <img class="icon" src="assets/icon-mis-gifos-sin-contenido.svg" alt="icono mis gifos sin contenido pequeño">
                 <p class="title">Mis GIFOS</p>
-                <img class="img-nocontent" src="assets/icon-mis-gifos-sin-contenido.svg" alt="">
-                <p class="txt">¡Anímate a crear tu primer GIFO!</p>
+                <div class="ctn-items">
+                    <img class="img-nocontent" src="assets/icon-mis-gifos-sin-contenido.svg" alt="icono mis gifos sin contenido mediano">
+                    <p class="txt">¡Anímate a crear tu primer GIFO!</p>
+                </div>
             </div>
-            <div id="" class="ctn-content"></div>
+            <div id="root-my-gifos" class="ctn-content"></div>
         </section>
         <section id="gifcommunity"class="gifcommunity">
             <div class="ctn-gifcomm">
