--- a/index.html
+++ b/index.html
@@ -139,5 +139,5 @@
         </div>
     </footer> 
 </body>
-<script src="/scripts/main.js" type="module"></script>
+<script src="scripts/main.js" type="module"></script>
 </html>
