--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div id="root-my-gifos" class="ctn-content"></div>
         </section>
-        <section id="gifcommunity"class="gifcommunity">
+        <section id="gifcommunity" class="gifcommunity">
             <div class="ctn-gifcomm">
                 <p class="title">Trending GIFOS</p>
                 <p class="txt">Mira los últimos <br> GIFOS de nuestra comunidad</p>
@@ -86,45 +86,53 @@
                 </div>
             </div>    
         </section>
-        <section class="creategif">
-            <div>
-                <img src="assets/camara.svg" alt="">
-                <div>
-                   <div>
-                        <div>
-                            <p>Aquí podrás crear tus propios GIFOS</p>
-                            <p>¡Crea tu GIFO en sólo 3 pasos! (sólo necesitas una cámara para grabar un video)</p>
-                        </div>
-                        <div>
-                            <p>¿Nos das acceso a tu cámara?</p>
-                            <p>El acceso a tu camara será válido sólo por el tiempo en el que estés creando el GIFO.</p>
-                        </div>
-                        <div>
-                            <img src="" alt="">
-                            <P>Estamos subiendo tu GIFO</P>
-                            <img src="assets/icon-download.svg" alt="">
-                            <img src="assets/icon-link-normal.svg" alt="">
-                            <img src="assets/check.svg" alt="">
-                            <P>GIFO subido con éxito</P>
-                        </div>
-                        <div>
-                            <div>
-                                <button>1</button>
-                                <button>2</button>
-                                <button>3</button>
-                            </div>
-                            <div>
-                                <span>00:00:05</span>
-                                <span>REPETIR CAPTURA</span>
-                            </div>
-                        </div>
-                   </div>
-                   <button>GRABAR</button>
-                   <button>FINALIZAr</button>
+        <section id="stc-createGif" class="creategif">
+            <div class="ctn-creategif">
+                <div class="ctn-camera">
+                    <img src="assets/camara.svg" alt="camara-diurna">
+                    <img class="hideL" src="assets/camara-modo-noc.svg" alt="camara-nocturna">
+                    <img class="light-camera" src="assets/element-luz-camara.svg" alt="luz-camara">
                 </div>
-                <img src="assets/pelicula.svg" alt="">
+                <div class="ctn-maker">
+                    <div class="container-making">
+                        <div class="half-square">
+                            <div class="half-square-inside-tl"></div>
+                            <div class="half-square-inside-tr"></div>
+                        </div>
+                        <div class="flex-text-create">
+                            <div class="text-inside-create" id="container-video">
+                                <h1>Aquí podrás <br>crear tus propios <span>GIFOS</span></h1>
+                                <p>¡Crea tu GIFO en sólo 3 pasos!</p>
+                                <p>(sólo necesitas una cámara para grabar un video)</p>
+                            </div>
+                        </div>
+                        <div class="half-square">
+                            <div class="half-square-inside-bl"></div>
+                            <div class="half-square-inside-br"></div>
+                        </div>
+                    </div>
+                    <div class="container-control">
+                        <div id="container-steps" class="container-steps">
+                            <div id="step-1" class="step">1</div>
+                            <div id="step-2" class="step">2</div>
+                            <div id="step-3" class="step">3</div>
+                            <div id="repeat" class="repeat-capture hideBtn"><p>REPETIR CAPTURA</p></div>
+                            <div id="timing" class="time-recording hideBtn">00:00:00</div>
+                        </div>
+                        <div class="container-line"></div><br>
+                        <div class="container-buttons">
+                            <div id="starting" class="button-cgf">Comenzar</div>
+                            <div id="recording" class="button-cgf hideBtn">Grabar</div>
+                            <div id="finishing" class="button-cgf hideBtn">Finalizar</div>
+                            <div id="uploading" class="button-cgf hideBtn">Subir Gifo</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-roll">
+                    <img class="hideD" src="assets/pelicula.svg" alt="pelicula">
+                    <img class="hideL" src="assets/pelicula-modo-noc.svg" alt="pelicula-noc">
+                </div>
             </div>
-            <button>COMENZAR</button>
         </section>
     </main>
     <footer>
