agrega stylos dark mode de crear gifos

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <section id="stc-createGif" class="creategif">
             <div class="ctn-creategif">
                 <div class="ctn-camera">
-                    <img src="assets/camara.svg" alt="camara-diurna">
+                    <img class="hideD" src="assets/camara.svg" alt="camara-diurna">
                     <img class="hideL" src="assets/camara-modo-noc.svg" alt="camara-nocturna">
                     <img class="light-camera" src="assets/element-luz-camara.svg" alt="luz-camara">
                 </div>
