--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="ctn-items">
                 <img class="icon" src="assets/icon-mis-gifos-sin-contenido.svg" alt="icono mis gifos sin contenido pequeño">
                 <p class="title">Mis GIFOS</p>
-                <div class="ctn-items">
+                <div class="ctn-items"  id="zero-gifs">
                     <img class="img-nocontent" src="assets/icon-mis-gifos-sin-contenido.svg" alt="icono mis gifos sin contenido mediano">
                     <p class="txt">¡Anímate a crear tu primer GIFO!</p>
                 </div>
@@ -148,4 +148,5 @@
     </footer> 
 </body>
 <script src="scripts/main.js" type="module"></script>
+<script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
 </html>
