added events to ech gif

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="checkbox" id="menu-toggle">
             <label class="burguer-icon" for="menu-toggle"><i class="fas fa-bars"></i></label>
             <label class="close-icon" for="menu-toggle"><i class="fas fa-times"></i></label>
-            <ul class="menu">
+            <ul class="menu" id="menu" >
                 <li id="mode"><a href="#">Modo<span class="dark" id="dark-mode"> Nocturno</span><span class="day" id="day-mode"> Diurno</span></a></li>
                 <li id="fav"><a href="#">Favoritos</a> </li>
                 <li id="my-gifs"><a href="#">Mis GIFOS</a></li>
