finishing functions and styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li id="mode"><a href="#">Modo<span class="dark" id="dark-mode"> Nocturno</span><span class="day" id="day-mode"> Diurno</span></a></li>
                 <li id="fav"><a href="#">Favoritos</a> </li>
                 <li id="my-gifs"><a href="#">Mis GIFOS</a></li>
-                <li id="create-gif"><i class="fas fa-plus-circle"></i></li>
+                <li id="create-gif"><i class="fas fa-plus-circle"></i> <a href="#" class="crea-gif">Crear GIFO </a> </li>
             </ul>
         </nav>
     </header>
@@ -78,11 +78,11 @@
                 <p class="title">Trending GIFOS</p>
                 <p class="txt">Mira los últimos <br> GIFOS de nuestra comunidad</p>
                 <div class="mainctn-gifs">
-                    <i class="ic prev fas fa-angle-left"></i>
+                    <i class="ic prev fas fa-angle-left" id="previous"></i>
                     <div id="ctn-gifs" class="ctn-gifs">
                         <div id="sctn-gifs" class="sctn-gifs"></div>
                     </div>
-                    <i class="ic next fas fa-angle-right"></i>
+                    <i class="ic next fas fa-angle-right" id="next"></i>
                 </div>
             </div>    
         </section>
@@ -137,11 +137,13 @@
     </main>
     <footer>
         <div class="ctn-footer">
-            <p class="share">Compartir en:</p>
-            <div class="social">
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a> 
+            <div class="social-media">
+                <p class="share">Compartir en:</p>
+                <div class="social">
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a> 
+                </div>
             </div>
             <p>© GIFOS 2020 All Rights Reserved.</p>
         </div>
