--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="">
     <header class="container">
         <nav> 
-            <a href="/index.html"><img src="assets/logo-mobile.svg" alt="logo of web page"></a>
+            <a href="/DWAG-Gifos"><img src="assets/logo-mobile.svg" alt="logo of web page"></a>
             <input type="checkbox" id="menu-toggle">
             <label class="burguer-icon" for="menu-toggle"><i class="fas fa-bars"></i></label>
             <label class="close-icon" for="menu-toggle"><i class="fas fa-times"></i></label>
